Revert "Solved Issue Wrap line #78"
This reverts commit 0954c61465b6918e815f0ef31de399cc2746c42c.

--- a/kilink/static/css/style.css
+++ b/kilink/static/css/style.css
@@ -31,7 +31,3 @@
 .node-text {
     fill: #fff;
 }
-
-#wrap{
-    vertical-align: sub;
-}
